# BigIntegerInCpp

./: CMakeLists.txt  README.md  global.h  main.cpp
lib/: BigInteger.cpp  BigInteger.h  Complex.cpp  Complex.h
other/: constant.cpp  constant.h
test/: calculate.py  constant.py  test.cpp  test.h
